# deepdoc-rag-service

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: config.py  jobs.py  json_io.py  task_store.py  vendor.py
app/models/: schemas.py
app/services/: format_service.py  parser_service.py
app/web/: index.html
infinity/: rag_tokenizer.py
scripts/: download_models.py
tests/: test_format_service.py  test_health.py  test_upload_text.py
